--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
     <body>
         <div id="phaser-game"></div>
         <script src="js/lib/phaser.min.js" charset="utf-8"></script>
+        <script src="js/scenes/BootScene.js" charset="utf-8"></script>
+        <script src="js/classes/Player.js" charset="utf-8"></script>
+        <script src="js/classes/Chest.js" charset="utf-8"></script>
+        <script src="js/scenes/GameScene.js" charset="utf-8"></script>
+        <script src="js/scenes/TitleScene.js" charset="utf-8"></script>
+        <script src="js/scenes/UIScene.js" charset="utf-8"></script>
         <script src="js/main.js" charset="utf-8"></script>
     </body>
 </html>
